# serde-pod

./: Cargo.toml  LICENSE  readme.md
src/: de.rs  error.rs  lib.rs  ser.rs
