[package]
name = "serde-pod"
version = "0.2.0"
authors = ["Mingun <alexander_sergey@mail.ru>"]
description = "https://github.com/Mingun/serde-pod"
repository = "https://github.com/Mingun/serde-pod"
readme = "readme.md"
license = "MIT"
keywords = ["serde", "pod", "serialization"]
categories = ["encoding"]

[dependencies]
byteorder = { version = "1.3", features = ["i128"] }
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"
quickcheck = "0.9"
